<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:text="@string/lblTituloInserta"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/txtnombrecli"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="24dp"
        android:layout_toLeftOf="@+id/textView1"
        android:text="@string/label" />

    <EditText
        android:id="@+id/txtciudad"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtnombrecli"
        android:layout_below="@+id/txtnombrecli"
        android:ems="10"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/txtnombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignRight="@+id/txtsede"
        android:layout_below="@+id/textView4"
        android:ems="10"
        android:inputType="text" />

    <EditText
        android:id="@+id/txtsede"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lblElimNombre"
        android:layout_alignRight="@+id/txtciudad"
        android:layout_below="@+id/lblElimNombre"
        android:ems="10"
        android:inputType="text" />

    <EditText
        android:id="@+id/txttelefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView5"
        android:layout_alignRight="@+id/txtnombre"
        android:layout_below="@+id/textView5"
        android:ems="10"
        android:inputType="text" />

    <EditText
        android:id="@+id/txtdireccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView6"
        android:layout_alignRight="@+id/txttelefono"
        android:layout_below="@+id/textView6"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txttelefono"
        android:layout_below="@+id/txttelefono"
        android:text="@string/lbl5" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtnombre"
        android:layout_below="@+id/txtnombre"
        android:text="@string/lbl4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtsede"
        android:layout_below="@+id/txtsede"
        android:text="@string/lbl3" />

    <TextView
        android:id="@+id/lblElimNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtciudad"
        android:layout_below="@+id/txtciudad"
        android:text="@string/label2" />

    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtdireccion"
        android:layout_below="@+id/txtdireccion"
        android:layout_marginTop="20dp"
        android:text="@string/btnRegistrar" />

    <Button
        android:id="@+id/btnRegresarInsert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnRegistrar"
        android:layout_alignBottom="@+id/btnRegistrar"
        android:layout_alignRight="@+id/txtdireccion"
        android:text="@string/btnRegresaInsert" />

</RelativeLayout>
